--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
 
       <div class="search">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" class="searchInput" id="inputBusqueda" placeholder="Search Movies">
-        <button class="btnBuscar" id="btnBuscar">Search</button>
+        <i class="fa-solid fa-magnifying-glass  initial"></i>
+        <input type="search" class="searchInput" id="inputBusqueda" placeholder="Search Movies">
+        <i class="fa-solid fa-x notPend"></i>
       </div>
       <nav class="nav">
         <ul class="main">
