--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <div class="search">
         <i class="fa-solid fa-magnifying-glass  initial"></i>
-        <input type="search" class="searchInput" id="inputBusqueda" placeholder="Search Movies">
+        <input type="text" class="searchInput" id="inputBusqueda" placeholder="Search Movies">
         <i class="fa-solid fa-x notPend"></i>
       </div>
       <nav class="nav">
